--- a/index.html
+++ b/index.html
@@ -54,14 +54,15 @@
 	 	Choose your Country from the list:
 
 
-<input list="list">
-<datalist id="list">
+
+<select name="country">
+  <option>RWANDA</option>
   <option value1="RWANDA">
   <option value2="BURUNDI">
   <option value3="TANZANIA">
   <option value4="UGANDA">
   <option value5="KENYA">
-</datalist><br>
+</select>
 comment<br>
 <textarea row="3"cols="10"name="comment"></textarea><br>
 <input type="submit"name="submit"value="submit"
