--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
 
 <select name="country">
   <option>RWANDA</option>
-  <option value1="RWANDA">
-  <option value2="BURUNDI">
-  <option value3="TANZANIA">
-  <option value4="UGANDA">
-  <option value5="KENYA">
+  <option>BURUNDI</option> 
+  <option>KENYA</option>
+  <option>TANZANIA</option> 
+  <option>UGANDA</option>
+  <option >SUDANI</option>
 </select>
 comment<br>
 <textarea row="3"cols="10"name="comment"></textarea><br>
